fix erreur sonarqube